tests/testcases/invalid/semantic/42_incomplete_function_parameter.ciel
// Test: Incomplete type used as function parameter
// Expected: Error - incomplete type cannot be used as function parameter

struct ForwardDeclaredStruct;

void process(struct ForwardDeclaredStruct param);

int main(){
    return 0;
}
